Fix background covering canvas

--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -1,5 +1,5 @@
 .hero {
-    background-color: black;
+    /*background-color: black;*/
     color: white;
 }
 
